--- a/style.css
+++ b/style.css
@@ -1,1 +1,303 @@
+html, body, *{
+    padding: 0;
+    margin: 0;
+    font-family: 'poppins', sans-serif;
+    font-size: 1rem;
+}
 
+.poppins-thin {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .poppins-extralight {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
+  .poppins-light {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .poppins-semibold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .poppins-bold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .poppins-extrabold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
+  .poppins-black {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .poppins-thin-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .poppins-extralight-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+  }
+  
+  .poppins-light-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .poppins-regular-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .poppins-medium-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .poppins-semibold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+  }
+  
+  .poppins-bold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .poppins-extrabold-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+  }
+  
+  .poppins-black-italic {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+
+body{
+    background: #eee;
+    /* overflow: hidden; */
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px; */
+}
+
+.main_container{
+    border-radius: 5px;
+    max-width: 40vw;
+    height: auto;
+    margin: 50px auto;
+    background: linear-gradient(to bottom left, rgb(33, 122, 0), rgb(25, 196, 2), rgb(31, 253, 31));
+    box-shadow: 2px 4px 15px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+
+}
+
+main{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+h2{
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.img_container{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    display: inline-block;
+    border: 5px solid #fff;
+    box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.3);
+    animation: imgAnimation 3s linear infinite;
+    -o-animation: imgAnimation 3s linear infinite;
+    -moz-animation:imgAnimation 3s linear infinite ;
+    -webkit-animation: imgAnimation 3s linear infinite;
+
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes imgAnimation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+@-o-keyframes imgAnimation{
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes imgAnimation{
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes imgAnimation{
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.text_section{
+    text-align: center;
+    padding: 5px;
+}
+
+.text_section h4{
+    font-size: 1.5rem;
+    letter-spacing: 3px;
+}
+
+.text_section strong{
+    color: rgb(44, 44, 44);
+    font-weight: 500;
+}
+
+.control_section{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px;
+}
+
+.fa{
+    padding: 10px;
+    margin: 0 10px;
+}
+
+.fa-step-forward, .fa-step-backward, .fa-play-circle{
+    cursor: pointer;
+    opacity: 0.8;
+    transition: opacity .2s;
+}
+
+
+.fa-step-forward:hover, .fa-step-backward:hover, .fa-play-circle:hover{
+    opacity: 1.0;
+}
+
+.sound_control_container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* padding: 15px; */
+    width: 75%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.volume_control{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px;
+    margin: 0 auto;
+
+}
+
+.sound_range, .volume_range{
+    appearance: none;
+    height: 4px;
+    background-color: #000;
+    margin: 0 20px;
+    opacity: 0.7;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
+}
+
+
+.sound_range:hover, .volume_range{
+    opacity: 1.0;
+}
+
+.sound_range::-webkit-slider-thumb, .volume_range::-webkit-slider-thumb{
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.volume_range{
+    width: 30%;
+}
+
+/* .volume_increase, .volume_decrease{
+    padding: 10px;
+}
+.end_time, .start_time{
+    padding: 10px;
+} */
